--- a/scaffold/index.html.erb
+++ b/scaffold/index.html.erb
@@ -1,23 +1,8 @@
-<%%== index_header('list : <%= singular_table_name %>',@objs) %>
-<%%== table_header(@sort_direction, @sort_column, 
-<%= attributes.map{|a|a.name} %>) %>
-<tbody>  
-<%% if @objs.size > 0 %>   
-  <%% @objs.each do |obj| %>
-    <tr>
-			<% attributes.each_with_index do |attribute,index| -%>
-			<% if 0 == index %>
-      	<td><%%= link_to obj.<%= attribute.name %>, obj %></td>
-			<% else %>
-      	<td><%%= obj.<%= attribute.name %> %></td>			
-			<% end %>
-			<% end -%>      
-        <td><%%= edit_delete('<%= plural_table_name %>',obj.id) %></td>     
-    </tr>
-  <%% end %>
-<%% else %>
-    <%%== no_data %> 
-<%% end %>
-</tbody></table>
-
-<%%= link2new('<%= plural_table_name %>')%>
+<%% columns  =<%= attributes.map{|a|a.name} %> %>
+<%%== page_header() %>
+<%%= search_area() %>
+<%%= page_link(@objs) %>
+<div class="breadcrumb">
+  <%%= index_me @objs,@sort_column, @sort_direction %>
+</div >
+<%%== link2actions() %>
