--- a/ui/menu/menu_hash.html.erb
+++ b/ui/menu/menu_hash.html.erb
@@ -23,12 +23,12 @@
     <%= link_to("#{amenu[:title]} <b class='caret'></b>".html_safe, "#", {class: "dropdown-toggle", 'data-toggle' => "dropdown"}) %>
     <ul class="dropdown-menu">
     <% amenu[:subitems].each do |item| %>
-      <% unless item == "---" %>
+      <% if item == "---" %>
+        <li class="divider"></li>  
+      <% else %>            
         <li>
           <%= link_to item[:title], item[:path] %>
         </li>
-      <% else %>
-        <li class="divider"></li>
       <% end %>
     <% end %>
     </ul>
