--- a/ui/menu/menu_hash.html.erb
+++ b/ui/menu/menu_hash.html.erb
@@ -16,7 +16,9 @@
         ]
       }
     ]
-    
+
+amenu[:subitems] will be used for hash
+amenu.subitems   will be used for bd object
 <ul class="nav nav-tabs">
 <% (menus||[]).each do |amenu| %>
   <li class="dropdown">
