--- a/ui/simple_form.slim
+++ b/ui/simple_form.slim
@@ -7,3 +7,6 @@
 
     expect(rendered).to have_tag('input', with: { value: 'Save', class: "btn btn-primary btn-lg save" })
     expect(rendered).to have_tag('a', text: 'Cancel', with: { class: "btn btn-default btn-lg back", href: "javascript:history.back()" })
+
+Index    
+td = link_to "Delete", syslog_receiver_path(receiver['config_id']), method: :delete, data: {confirm: "You sure?"}, class: 'btn btn-default pull-right'
