Update and rename ui_delete_modal.html.slim to delete_item_modal.html.slim

--- a/ui/delete_item_modal.html.slim
+++ b/ui/delete_item_modal.html.slim
@@ -1,3 +1,9 @@
+link_to "Delete", 
+syslog_app_path(id: app['client_id'], name: app.try(:[],'name')), 
+method: :delete, 
+data: {confirm: "You sure?"}, 
+class: 'btn btn-default pull-right'
+
 a.btn.btn-default.btn-sm.btn-viewLogs data-target="##{target_id}" data-toggle='modal' href='#' Delete
 .modal.fade.in id=target_id
   .modal-dialog
